# DeskFlow-Desktop-Hud

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
